--- a/projetos.html
+++ b/projetos.html
@@ -16,7 +16,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="projetos.html">Projetos</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
