--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Cada iniciativa é guiada pelos valores que marcaram a trajetória de Edson Arantes do Nascimento — o
                     nosso eterno Pelé — como o respeito à diversidade, a superação de barreiras e a igualdade de
                     oportunidades para todos.</p>
-                <a href="#projetos" class="btn-primary">Conheça Nossos Projetos</a>
+                <a href="projetos.html" class="btn-primary">Conheça Nossos Projetos</a>
             </div>
         </section>
 
